# radar-tivano

./: .env.example  .gitignore  ANALIZA_I_REKOMENDACJE.md  CLAUDE.md  DEPLOYMENT.md  Procfile  manage.py  nixpacks.toml  pyproject.toml  requirements.txt  tivano_page.html
.claude/: settings.local.json
app/: admin.py  forms.py  models.py  urls.py  views.py
app/management/commands/: create_admin.py  setup_groups.py
app/migrations/: 0001_initial.py  0002_aircraft_photo_pdtpage_photo.py  0003_aircraft_base_flight_hours_aircraft_base_landings.py  0004_alter_aircraft_base_flight_hours_and_more.py  0005_aircraft_show_in_schedule.py  0006_alter_aircraft_photo_alter_pdtpage_photo.py
static/img/: README.md
templates/: base.html  home.html  landing.html
templates/aircraft/: aircraft_detail.html  aircraft_list.html  create_aircraft.html
templates/auth/: login.html
templates/pdt/: create_pdt_page.html  pdt_detail.html  pdt_list.html
templates/pilot/: change_password.html  create_pilot.html  pilot_detail.html  pilot_list.html
templates/schedule/: confirm_delete_reservation.html  create_reservation.html  schedule.html
tivano/: asgi.py  settings.py  urls.py  wsgi.py
