[tool.poetry]
name = "Tivano"
version = "1.0.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
psycopg = { version = "^3.2.3", extras = ["binary"] }
environs = "^14.1.1"
pillow = "^10.1.0"
python-dateutil = "^2.8.2"
gunicorn = "^23.0.0"
whitenoise = "^6.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 160
indent-width = 4
fix = true
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    "data/filestore"
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "DJ", # django
    "T20", # prints
    "RET", # returns
    "TID", # tidy imports
]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
multi_line_output = 3
force_grid_wrap = 2
